2005-12-19  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/text/StyledEditorKit: New Directory.
	* gnu/testlet/javax/swing/text/StyledEditorKit/createInputAttributesTest.java:
	New Test.

2005-12-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxUI/MyMetalComboBoxUI.java:
	Fixed tag.

2005-12-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicFileChooserUI/getApproveButtonText.java:
	(test): Add null argument test.

2005-12-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComboBox/model.java: New test.

2005-12-15  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	Made tests more safe from sideeffects by using absolute Dimension
	values instead of some size properties.

2005-12-15  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JComponent/getPreferredSize.java:
	Added test for changing the value of preferred size.

2005-12-14  Tom Tromey  <tromey@redhat.com>

	PR classpath/25389:
	* gnu/testlet/java/io/File/newFileURI.java (test): Expect
	non-hierarchical URI to fail.

2005-12-14  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/lang/Class/newInstance.java: Changed a criterion.

2005-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/newFileURI.java: New test.

2005-12-13  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/security/Security/property.java: Test handling
	of null values.

2005-12-12  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JComponent/getPreferredSize.java:
	New test.

2005-12-12  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	New test for this layout manager.

2005-12-09  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/Class/security.java: New test.

2005-12-09  Lillian Angel  <langel@redhat.com>
