@@ -1,3 +1,7 @@
+2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure1.java: New test.
+
 2005-12-19  Lillian Angel  <langel@redhat.com>
 
 	* gnu/testlet/javax/swing/text/StyledEditorKit: New Directory.
